--- a/conf/config.ini
+++ b/conf/config.ini
@@ -3,7 +3,7 @@ release = false
 
 [mysql]
 user = root
-password = root1234
-host = 127.0.0.1
-port = 23306
+password = wade
+host = mysql8019
+port = 3306
 db = bubble
